<resources>
    <string name="app_name">SAFE</string>
    <string name="my_contacts">My Contacts</string>
    <string name="recents">Recents</string>
    <string name="contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="manage_blocklist">Manage Blocklist</string>
    <string name="fraud_detection_settings">Fraud Detection Settings</string>
    <string name="legal_and_compliance">Legal &amp; Compliance</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>