<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/_12sdp"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_12sdp" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="@dimen/_12sdp"
            android:orientation="horizontal"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="@dimen/_12sdp"
            android:orientation="horizontal"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/gd3"
            app:layout_constraintStart_toStartOf="@+id/gd1"
            app:layout_constraintTop_toTopOf="@id/gd2">


            <TextView
                android:id="@+id/txtHeadMyContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_contacts"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileImage"
                android:onClick="toMain"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/david"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:queryHint="Search by name or number"
            android:iconifiedByDefault="false"
            app:layout_constraintEnd_toStartOf="@+id/gd3"
            app:layout_constraintStart_toStartOf="@+id/gd1"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:id="@+id/txtRecents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            android:textSize="@dimen/_20sdp"
            android:text="@string/recents"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecents"
            android:layout_width="0dp"
            android:layout_height="@dimen/_110sdp"
            tools:listitem="@layout/contact_item_layout"
            app:layout_constraintStart_toStartOf="@id/gd1"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            app:layout_constraintTop_toBottomOf="@id/txtRecents"/>
        <TextView
            android:id="@+id/txtContacs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rvRecents"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            android:textSize="@dimen/_20sdp"
            android:text="@string/contacts"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvContacts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/gd4"
            tools:listitem="@layout/contact_item_layout"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintTop_toBottomOf="@id/txtContacs" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/cardViewAddContact"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:cardBackgroundColor="@color/black"
            android:layout_margin="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_50sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <ImageView
                android:id="@+id/imgAddContact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_4sdp"
                android:src="@drawable/baseline_add_24"/>

        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>




    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>