<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/_12sdp"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_12sdp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/_12sdp"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gd4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/_12sdp"
        android:orientation="horizontal"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/gd3"
        app:layout_constraintStart_toStartOf="@+id/gd1"
        app:layout_constraintTop_toTopOf="@id/gd2">


        <TextView
            android:id="@+id/txtHeadSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profileImage"
            android:onClick="toMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/david"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/account"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_25sdp"/>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            app:layout_constraintTop_toBottomOf="@id/txtAccount">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtManageAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_blocklist"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgManageAccount"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtFraudDetection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fraud_detection_settings"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgFraudDetection"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtNotificationPreferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_blocklist"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgNotificationPreferences"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    <TextView
            android:id="@+id/txtSupport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll1"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            android:textSize="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Support"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_25sdp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/gd1"
            app:layout_constraintEnd_toEndOf="@id/gd3"
            app:layout_constraintTop_toBottomOf="@id/txtSupport">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtHelpCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Help Center"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgHelpCenter"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtLegalAndCompliance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_and_compliance"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgLegalAndCompliance"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <TextView
                    android:id="@+id/txtFeedbackForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Feedback Form"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgFeedbackForm"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/baseline_arrow_forward_ios_24"
                    android:layout_margin="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>